added get_request.py file

--- a/.README.md
+++ b/.README.md
@@ -8,3 +8,10 @@ We are going to be looking into the world of API's.
 - JSON VD XML 
 - Examples of API services and growth via API
 - API in finance, work, telecommunication, data 
+
+
+HTTP Codes:
+- 200   OK
+- 300   Redirect/ More than one response
+- 400   Page not Found/ Wrong path
+- 500   Internal Error  
