--- a/.README.md
+++ b/.README.md
@@ -15,3 +15,19 @@ HTTP Codes:
 - 300   Redirect/ More than one response
 - 400   Page not Found/ Wrong path
 - 500   Internal Error  
+
+## Task 
+1.  Play around with API and getting data
+2. From a postcode retrieve the following data:
+    - Longitude
+    - Latitude
+    - nuts
+    - admin_ward
+3. Build a function that returns the lat of a postcode
+4. Build a function that returns the long of a postcode
+5. Allows me to search a post code and get the following data exported to a .txt files:
+    - postcode
+    - lat
+    - long
+    - nuts
+    - admin_ward
